[tool.poetry]
name = "ragdoll"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.5.0"
together = "^0.2.10"
mistralai = "^0.0.8"
pandas = "^1.3.3"
statsmodels = "*"
flask = "*"
flask-httpauth = "*"
beautifulsoup4 = "*"
fuzzysearch = "*"
unidecode = "*"
matplotlib = "*"
seaborn = "*"
pydantic = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
